# battleship-rs

./: Cargo.toml  README.md
battleship/: Cargo.toml
battleship/src/: board.rs  cell.rs  direction.rs  lib.rs  point.rs  random.rs  ship.rs  shot.rs  shot_outcome.rs  shot_result.rs
battleship_cli/: Cargo.toml
battleship_cli/src/: main.rs
src/: main.rs
