[workspace]
members = ["battleship", "battleship_cli"]
resolver = "2"

[workspace.package]
name = "battleship-rs"
authors = ["Aaron Mathews <aamathews23@gmail.com>"]
edition = "2021"
homepage = "https://github.com/aamathews23/battleship-rs"
readme = "README.md"
repository = "https://github.com/aamathews23/battleship-rs"
